--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.0.1",
     "react-select": "^5.8.3",
     "react-toastify": "^10.0.6",
+    "swiper": "^11.1.15",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
