--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "gapi-script": "^1.2.0",
