--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,17 +1,19 @@
 {
-    "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
         {
-            "src" : "server.js",
-            "use" : "@vercel/node"
-        },
-        {
-            "src" : "src/**/*",
-            "use" : "@vercel/static"
+            "src": "server.js",
+            "use": "@vercel/node"
         }
     ],
-    "routes" : [
-        {"src" : "/(.*)", "dest" : "/server.js"}
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/server.js"
+        }
+    ],
+    "outputDirectory": "public",
+    "includeFiles": [
+        "public/**"
     ]
 }
